SourceMetaData/src/objects/Position__c.object
<CustomObject>
    <description>A juntion object between contact (LBH staff) and team (service and management teams). As such this object will be used to indicate what positions staff members currently hold on teams. This is a many to many relationship</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date at which the position ended (blank if position is ongoing)</description>
        <inlineHelpText>The date at which the position ended (blank if position is ongoing)</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>A short description of the position.</description>
        <inlineHelpText>A short description of the position.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <description>The member of staff that holds the position</description>
        <inlineHelpText>The member of staff that holds the position</inlineHelpText>
        <label>Staff Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The start date of the position.</description>
        <inlineHelpText>The start date of the position.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>The team that the position is in.</description>
        <inlineHelpText>The team that the position is in. (this could be a service team or management team)</inlineHelpText>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Position</label>
    <nameField>
        <displayFormat>PN-{000000}</displayFormat>
        <label>Position No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>